Set link to lasagna on home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 
     <p>Ceci est un projet dans le cadre du cours <em>foundations</em> de <em>The Odin Project</em>. Il s'agit d'un site
         basique en html qui propose quelques recettes de cuisine.</p>
+
+    <h2>Les recettes</h2>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagnes</a></li>
+    </ul>
 </body>
 
 </html>
