--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Les recettes</h2>
     <ul>
         <li><a href="recipes/lasagna.html">Lasagnes</a></li>
+        <li><a href="recipes/soup.html">Velouté</a></li>
     </ul>
 </body>
 
