--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <ul>
         <li><a href="recipes/lasagna.html">Lasagnes</a></li>
         <li><a href="recipes/soup.html">Velouté</a></li>
+        <li><a href="recipes/poulet.html">Poulet au curry</a></li>
     </ul>
 </body>
 
