--- a/index.html
+++ b/index.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style/styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="wrapper">
+        <h1>Odin Recipes</h1>
 
-    <p>Ceci est un projet dans le cadre du cours <em>foundations</em> de <em>The Odin Project</em>. Il s'agit d'un site
-        basique en html qui propose quelques recettes de cuisine.</p>
+        <p>Ceci est un projet dans le cadre du cours <em>foundations</em> de <em>The Odin Project</em>. Il s'agit d'un
+            site
+            basique en html qui propose quelques recettes de cuisine.</p>
 
-    <h2>Les recettes</h2>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagnes</a></li>
-        <li><a href="recipes/soup.html">Velouté</a></li>
-        <li><a href="recipes/poulet.html">Poulet au curry</a></li>
-    </ul>
+        <h2>Les recettes</h2>
+        <ul id="liste-recettes">
+            <li class="lien-recette"><a href="recipes/lasagna.html">Lasagnes</a></li>
+            <li class="lien-recette"><a href="recipes/soup.html">Velouté</a></li>
+            <li class="lien-recette"><a href="recipes/poulet.html">Poulet au curry</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
