Modify index.html for css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
+    <main class="wrapper">
         <h1>Odin Recipes</h1>
 
         <p>Ceci est un projet dans le cadre du cours <em>foundations</em> de <em>The Odin Project</em>. Il s'agit d'un
@@ -22,7 +22,7 @@
             <li class="lien-recette"><a href="recipes/soup.html">Velouté</a></li>
             <li class="lien-recette"><a href="recipes/poulet.html">Poulet au curry</a></li>
         </ul>
-    </div>
+    </main>
 </body>
 
 </html>
