Modify recipes html for css purpose

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,39 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 
 <body>
-    <h1>Lasagna</h1>
-    <picture>
-        <img src="../images/lasagna.jpg" alt="Picture of lasagnas" width="250">
-        <figcaption>A photo by Rachel Claire on <a href="https://www.pexels.com/" target="_blank">pexels.com</a>
-        </figcaption>
+    <main class="wrapper">
+        <h1>Lasagna</h1>
+        <picture>
+            <img src="../images/lasagna.jpg" alt="Picture of lasagnas" width="250">
+            <figcaption>A photo by Rachel Claire on <a href="https://www.pexels.com/" target="_blank">pexels.com</a>
+            </figcaption>
 
-    </picture>
+        </picture>
 
-    <h2>Description</h2>
-    <p>Une recette de lasagnes pour se reconforter quand il fait froid.</p>
+        <h2>Description</h2>
+        <p>Une recette de lasagnes pour se reconforter quand il fait froid.</p>
 
-    <h2>Ingrédients</h2>
-    <ul>
-        <li>500g de viande de boeuf</li>
-        <li>3 oignons</li>
-        <li>300g de tomates en conserves</li>
-        <li>Pâtes à lasagne</li>
-    </ul>
+        <h2>Ingrédients</h2>
+        <ul class="ingredients">
+            <li>500g de viande de boeuf</li>
+            <li>3 oignons</li>
+            <li>300g de tomates en conserves</li>
+            <li>Pâtes à lasagne</li>
+        </ul>
 
-    <h2>Etapes</h2>
-    <ol>
-        <li>Couper les oignons</li>
-        <li>Faire cuire la viande</li>
-        <li>Ajouter les oignons et les tomates</li>
-        <li>Faire des couches avec la sauce et les pâtes</li>
-        <li>Faire cuire au four 50 minutes</li>
-    </ol>
+        <h2>Etapes</h2>
+        <ol class="etapes">
+            <li>Couper les oignons</li>
+            <li>Faire cuire la viande</li>
+            <li>Ajouter les oignons et les tomates</li>
+            <li>Faire des couches avec la sauce et les pâtes</li>
+            <li>Faire cuire au four 50 minutes</li>
+        </ol>
 
-    <a href="../index.html">Home</a>
-
+        <a href="../index.html">Home</a>
+    </main>
 </body>
 
 </html>
