--- a/recipes/poulet.html
+++ b/recipes/poulet.html
@@ -5,39 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poulet au curry</title>
+    <link rel="stylesheet" href="../style/styles.css">
 </head>
 
 <body>
-    <h1>Poulet au curry</h1>
-    <picture>
-        <img src="../images/poulet.jpg" alt="Picture of chicken curry" width="250">
-        <figcaption>A photo by Alberta Studios on <a href="https://www.pexels.com/" target="_blank">pexels.com</a>
-        </figcaption>
+    <main class="wrapper">
+        <h1>Poulet au curry</h1>
+        <picture>
+            <img src="../images/poulet.jpg" alt="Picture of chicken curry" width="250">
+            <figcaption>A photo by Alberta Studios on <a href="https://www.pexels.com/" target="_blank">pexels.com</a>
+            </figcaption>
 
-    </picture>
+        </picture>
 
-    <h2>Description</h2>
-    <p>Une recette de poulet au curry pour varier.</p>
+        <h2>Description</h2>
+        <p>Une recette de poulet au curry pour varier.</p>
 
-    <h2>Ingrédients</h2>
-    <ul>
-        <li>500g de viande de poulet</li>
-        <li>2 oignons</li>
-        <li>2g de curry en poudre</li>
-        <li>1g de cumin en poudre</li>
-        <li>20cl de crème fraiche</li>
-    </ul>
+        <h2>Ingrédients</h2>
+        <ul class="ingredients">
+            <li>500g de viande de poulet</li>
+            <li>2 oignons</li>
+            <li>2g de curry en poudre</li>
+            <li>1g de cumin en poudre</li>
+            <li>20cl de crème fraiche</li>
+        </ul>
 
-    <h2>Etapes</h2>
-    <ol>
-        <li>Couper les oignons</li>
-        <li>Faire cuire la viande</li>
-        <li>Ajouter les oignons et la crème</li>
-        <li>Faire mijoter 20 minutes avec les épices</li>
-    </ol>
+        <h2>Etapes</h2>
+        <ol class="etapes">
+            <li>Couper les oignons</li>
+            <li>Faire cuire la viande</li>
+            <li>Ajouter les oignons et la crème</li>
+            <li>Faire mijoter 20 minutes avec les épices</li>
+        </ol>
 
-    <a href="../index.html">Home</a>
-
+        <a href="../index.html">Home</a>
+    </main>
 </body>
 
 </html>
